Test controller